# synergy-service

./: .coveragerc  .gitreview  AUTHORS  CONTRIBUTING.rst  ChangeLog  HACKING.rst  LICENSE_third-party.md  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
config/: synergy.conf
doc/source/: conf.py  index.rst  installation.rst  usage.rst
packaging/: README.md
packaging/debian/: changelog  control  copyright  pydist-overrides  python-synergy-service.dirs  python-synergy-service.install  python-synergy-service.lintian-overrides  python-synergy-service.postinst  python-synergy-service.postrm  python-synergy-service.preinst  python-synergy-service.synergy.init  python-synergy-service.synergy.upstart  rules
packaging/docker/: build_env.sh
packaging/docker/centos7/: Dockerfile  build.sh
packaging/docker/ubuntu-14.04/: Dockerfile  build.sh
packaging/docker/ubuntu-16.04/: build.sh
packaging/rpm/: python-synergy.spec
scripts/: synergy.service
synergy/: exception.py  service.py
synergy/auth/: plugin.py
synergy/client/: command.py  exception.py  keystone_v3.py  shell.py
synergy/common/: command.py  config.py  context.py  log.py  manager.py  rpc.py  serializer.py  service.py  utils.py  wsgi.py
synergy/examples/: timer_manager.py
synergy/tests/: test_manager.py  test_manager_abstract.py  test_manager_implementation.py
synergy/tests/functional/: test_synergy.py
synergy/tests/unit/: test_client_command_executecommand.py  test_client_command_httpcommand.py  test_client_command_managercommand.py  (+5 more)
