[metadata]
name = synergy-service
summary = Synergy is as an extensible general purpose management OpenStack service.
description-file = README.rst
author = Lisa Zangrando
author-email = lisa.zangrando@pd.infn.it
home-page = https://launchpad.net/synergy-service
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    synergy
scripts =
    bin/synergy
    bin/synergy-service

[entry_points]
synergy.managers =
    TimerManager = synergy.examples.timer_manager:TimerManager

synergy.commands =
    manager = synergy.client.command:ManagerCommand

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = synergy/locale
domain = synergy

[update_catalog]
domain = synergy
output_dir = synergy/locale
input_file = synergy/locale/synergy.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = synergy/locale/synergy.pot
